--- a/bs-config.json
+++ b/bs-config.json
@@ -1,5 +1,5 @@
 {
     "server": {
-        "baseDir": ["./src", "./build/contracts"]
+        "baseDir": ["./public", "./build/contracts"]
     }
 }
